# tera-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile-test  LICENSE  README.md  codefresh.yml
.github/workflows/: ci.yml  release.yml
ci/: build-deb  cargo-out-dir  sha256-releases  test-complete  ubuntu-install-packages  utils.sh
ci/docker/: README.md
src/: main.rs
