[package]
name = "tera-cli"
version = "0.4.1"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
description = "Tera CLI for one-off template interpolation from context file / env vars"
edition = "2018"
readme = "README.md"
categories = ["command-line-utilities", "value-formatting"]
license = "MIT"

[dependencies]
tera = "1.15.0"
structopt = "0.3.25"
serde = "1.0.130"
toml = "0.5.8"
serde_json = "1.0.70"
serde_yaml = "0.8.21"
snafu = "0.6.10"

[[bin]]
name = "tera"
path = "src/main.rs"
