[package]
name = "tera-cli"
version = "0.5.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
description = "Tera CLI for one-off template interpolation from context file / env vars"
edition = "2018"
readme = "README.md"
categories = ["command-line-utilities", "value-formatting"]
license = "MIT"

[dependencies]
tera = "1.17.1"
structopt = "0.3.26"
serde = "1.0.152"
toml = "0.5.10"
serde_json = "1.0.91"
serde_yaml = "0.9.16"
snafu = "0.7.4"

[[bin]]
name = "tera"
path = "src/main.rs"
